--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,7 @@
 [TELEGRAM]
 ACCESS_TOKEN = 1648510641:AAE-VlIdT7Ziu0lirwPAU0AS9zxsmaFVBns
+
+[REDIS]
+HOST = redis-12691.c245.us-east-1-3.ec2.cloud.redislabs.com
+PASSWORD = wt9D3b6Hg6hR2jc4doNHHLJWq15OT2bd
+REDISPORT = 12691
