--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - uses: aufdenpunkt/python-safety-check@master
+      - name: securityCheck       
+        uses: aufdenpunkt/python-safety-check@master
       
-      - name: securityCheck     
-        run: |
-           safety check
-      
+         
